--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   go_router: ^17.1.0
   slang: ^4.12.1
   slang_flutter: ^4.12.1
+  json_annotation: ^4.11.0
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +32,7 @@ dev_dependencies:
   test: ^1.29.0
   mocktail: ^1.0.4
   slang_build_runner: ^4.12.1
+  json_serializable: ^6.13.0
 
 flutter:
   uses-material-design: true
